@@ -5,6 +5,11 @@
 // 	- Details.
 //========================================
 
+12/24/2009
+	r73 [Jobbie]
+	* When mounted with warg and used warg strike in WoE maps it will fail.
+	* Fixed a typo in GN_CARTCANNON.
+
 12/23/2009
 	r72 [Jobbie]
 	* Fixed burning causing map-error. Sorry I messed up the code. (followed up r70)	
